[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
dotenv = "0.15.0"
mongodb = "3.2.3"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
serenity = { version = "0.12.4", features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = {version = "1.45.0", features = ["macros", "rt-multi-thread"]}
